@@ -1,5 +1,5 @@
 /*
- * $Id: vmysql.h,v 1.2 2003-10-20 18:59:57 tomcollins Exp $
+ * $Id: vmysql.h,v 1.2.2.1 2004-12-16 15:57:35 tomcollins Exp $
  * Copyright (C) 1999 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -263,7 +263,7 @@ valias_line text not null, index (alias, domain)"
 
 #endif
 
-#ifdef ENABLE_MYSQL_LOGGING
+#ifdef ENABLE_SQL_LOGGING
 #define VLOG_TABLE_LAYOUT "id BIGINT PRIMARY KEY AUTO_INCREMENT, \
       user char(32), passwd CHAR(32), \
       domain CHAR(64), logon VARCHAR(200), \
